# lunch

./: README.md  pyproject.toml  requirements.txt  tox.ini
project/database/: models.py  queries.py
project/templates/: order-form.html  save-order.html
project/views/: htmx_blocks.py
src/: app.py
src/app/: app.py  config.py  exception_handlers.py
src/app/api/: exception_handlers.py
src/app/core/: consts.py  dtos.py  entities.py  exceptions.py  interactors.py  repositories.py
src/app/core/database/: di.py  models.py  storages.py
src/app/core/services/: calendar.py  dish.py  user.py
src/app/web/: auth.py  dtos.py
src/app/web/static/: styles.css
src/app/web/templates/: 404.html  admin-panel.html  base.html  first-dishes.html  login_page.html  lunch-block.html  second-dishes.html  user-form.html  users.html
src/app/web/views/: admin_htmx_blocks.py  base.py  orders_htmx_blocks.py  utils.py
src/lunch/: app.py  common_utils.py  consts.py  dto.py  exception_handlers.py  utils.py
src/lunch/core/: consts.py  datatools.py  entities.py  in_memory_db.py  interactors.py  sqlalchemy_storages.py  storages.py
src/lunch/database/: db.py  models.py  queries.py
src/lunch/static/: styles.css
src/lunch/templates/: admin-panel.html  base.html  first-dishes.html  index.html  login_page.html  lunch-block.html  my-orders.html  order-form.html  orders.html  save-order.html  second-dishes.html  user-form.html  users.html
src/lunch/views/: admin_htmx_blocks.py  base.py  htmx_blocks.py  orders_htmx_blocks.py  utils.py
src/project/database/: db.py
src/project/static/: styles.css
src/project/templates/: 404.html  empty-order-block.html  second-dishes.html
