[project]
name = "lunch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "iar", email = "38orlov@gmail.com"},
]
dependencies = [
    "litestar[standard]>=2.12.1",
    "wemake-python-styleguide>=0.19.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
